MySQL database for deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/carts
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://rczr5yvuutdwgf6x:br08rdyozfaix7nw@q3vtafztappqbpzn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/j8z7xgno9shcte6d
+spring.datasource.username=rczr5yvuutdwgf6x
+spring.datasource.password=br08rdyozfaix7nw
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
