--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://rczr5yvuutdwgf6x:br08rdyozfaix7nw@q3vtafztappqbpzn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/j8z7xgno9shcte6d
 spring.datasource.username=rczr5yvuutdwgf6x
 spring.datasource.password=br08rdyozfaix7nw
+spring.datasource.hikari.max-lifetime=20000
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 debug=true
